[package]
edition = "2024"
name = "sh8601-rs"
version = "0.1.8"
description = "A Rust driver for the SH8601 display controller"
license = "MIT OR Apache-2.0"
repository = "https://github.com/theembeddedrustacean/sh8601-rs"
keywords = ["embedded", "display", "sh8601", "esp32", "no_std"]
categories = ["embedded"]
readme = "README.md"
homepage = "https://blog.theembeddedrustacean.com/"
exclude = ["target/debug/*", "assets/*"]

[lib]
name = "sh8601_rs"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
document-features = "0.2.12"
critical-section = { version = "1.2.0" }

esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev="7fe866d", features = ["unstable"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev="7fe866d" }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev="7fe866d"}
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev="7fe866d"}

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
[profile.release.package."*"]
opt-level = 3
